--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -16,8 +16,21 @@
     "inlineSources": true
   },
 
-  "files": [
+"filesGlob": [
+"**/*.ts"
+],
+"atom": {
+  "rewriteTsConfig": true
+},
+
+"files": [
     "main.ts",
     "typings.d.ts"
-  ]
-}
+  ],
+
+
+  "exclude": [
+      "node_modules",
+      "typings/main",
+      "typings/main.d.ts"
+  ]}
