--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
     "es6-shim": "0.35.1",
+    "express": "^4.14.0",
+    "multer": "^1.2.0",
+    "mysql": "^2.11.1",
+    "path": "^0.12.7",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "systemjs": "0.19.26",
